--- a/_includes/author-normandes.html
+++ b/_includes/author-normandes.html
@@ -1,10 +1,10 @@
 <div class=post-author>
   <figure class="author-picture">
-    <img src="/img/author/normandes.jpg" alt="Normandes Junior" 
-      title="Normandes Junior" style="border-radius: 50%">
+    <img src="/img/author/normandes.jpg" alt="Felipe Sousa" 
+      title="Felipe Sousa" style="border-radius: 50%">
   </figure>
   <div class="author-name">
-    <h1>Normandes Junior</h1>
+    <h1>Felipe Sousa</h1>
   </div>
   <div class="author-description">
     <p>Fundador da HibiCode, desenvolvedor de software na 
